changes overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  @apply overflow-x-hidden;
+}
+
 @layer base {
   :root {
     --background: 30 33% 98%;
